--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 *.db
+*.csv
 *.db-journal
 __pycache__
 lib/bot/token.0
@@ -6,3 +7,4 @@ lib/cogs/searchtoken.0
 lib/bot/testtoken.0
 *.log
 *.0
+ffmpeg
